[tool.poetry]
name = "docuchat"
version = "0.1.0"
description = ""
authors = ["timpara"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
langchain = "^0.1.7"
langchain-community = "^0.0.20"
gpt4all = "^2.2.1.post1"
chromadb = "^0.4.22"
unstructured = "^0.12.4"
markdown = "^3.5.2"
langchain-openai = "^0.0.6"
streamlit = "^1.31.1"
streamlit-chat = "^0.1.1"
fastembed = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
